<resources>
    <string name="app_name">BMI計算機</string>
    <string name="tv_age">年齢</string>
    <string name="tv_height">身長</string>
    <string name="tv_weight">体重</string>
    <string name="bt_calc">計算</string>
    <string name="bt_clear">クリア</string>
    <string name="tv_age_unit">歳</string>
    <string name="tv_hei_unit">cm</string>
    <string name="tv_wei_unit">kg</string>
    <string name="dialog_title">警告</string>
    <string name="dialog_msg">適切な肥満度を求めるためには、６歳未満の場合はカウブ指数が、
        ６歳から１５歳まではローレル指数が使われます。本アプリはBMIのみに対応しています。</string>
    <string name="dialog_btn_ok">確認</string>
</resources>